<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        style="@style/WidgetFoundation.Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/l1"
            android:paddingTop="@dimen/l_50"
            android:paddingEnd="@dimen/l1"
            android:paddingBottom="@dimen/l_50"
            tools:layout_gravity="center">

            <ImageView
                android:id="@+id/home_soc_icon"
                style="@style/WidgetFoundation.Icon.Primary"
                android:padding="@dimen/l_25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_battery"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/home_soc_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/l1"
                android:textAppearance="@style/AppearanceFoundation.Title"
                android:textColor="?colorPrimary"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/home_battery_title"
                app:layout_constraintBottom_toBottomOf="@+id/home_soc_icon"
                app:layout_constraintStart_toEndOf="@+id/home_soc_icon"
                app:layout_constraintTop_toTopOf="@+id/home_soc_icon" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/home_device_title_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                tools:constraint_referenced_ids="home_soc_icon,home_soc_title" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadingEdgeLength="@dimen/l1"
                android:requiresFadingEdge="horizontal"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@+id/home_soc_icon">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/home_technology"
                            style="@style/W.Home.Item.Top"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                style="@style/W.Home.ItemContent"
                                android:text="@string/home_technology_title" />

                            <TextView
                                android:id="@+id/home_technology_info"
                                style="@style/W.Home.ItemContent.Right"
                                tools:text="onclite" />

                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/home_level"
                            style="@style/W.Home.Item"
                            app:layout_constraintStart_toStartOf="@+id/home_technology"
                            app:layout_constraintTop_toBottomOf="@+id/home_technology">

                            <TextView
                                style="@style/W.Home.ItemContent"
                                android:text="@string/battery_level_title" />

                            <TextView
                                android:id="@+id/home_level_info"
                                style="@style/W.Home.ItemContent.Right"
                                tools:text="onclite" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/home_temperature"
                            style="@style/W.Home.Item"
                            app:layout_constraintStart_toStartOf="@+id/home_technology"
                            app:layout_constraintTop_toBottomOf="@+id/home_level">

                            <TextView
                                style="@style/W.Home.ItemContent"
                                android:text="@string/home_temperature_title" />

                            <TextView
                                android:id="@+id/home_temperature_info"
                                style="@style/W.Home.ItemContent.Right"
                                tools:text="onclite" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/home_voltage"
                            style="@style/W.Home.Item"
                            app:layout_constraintStart_toStartOf="@+id/home_level"
                            app:layout_constraintTop_toBottomOf="@+id/home_temperature">

                            <TextView
                                style="@style/W.Home.ItemContent"
                                android:text="@string/home_voltage_title" />

                            <TextView
                                android:id="@+id/home_voltage_info"
                                style="@style/W.Home.ItemContent.Right"
                                tools:text="onclite" />

                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/home_health"
                            style="@style/W.Home.Item"
                            app:layout_constraintStart_toStartOf="@+id/home_level"
                            app:layout_constraintTop_toBottomOf="@+id/home_voltage">

                            <TextView
                                style="@style/W.Home.ItemContent"
                                android:text="@string/home_health_title" />

                            <TextView
                                android:id="@+id/home_health_info"
                                style="@style/W.Home.ItemContent.Right"
                                tools:text="SDM632" />

                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/home_status"
                            style="@style/W.Home.Item"
                            app:layout_constraintStart_toStartOf="@+id/home_voltage"
                            app:layout_constraintTop_toBottomOf="@+id/home_health" >

                            <TextView
                                android:id="@+id/home_custom_title"
                                style="@style/W.Home.ItemContent"
                                android:text="@string/home_status_title" />

                            <TextView
                                android:id="@+id/home_status_info"
                                style="@style/W.Home.ItemContent.Right"
                                tools:text="onclite" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/home_conect"
                            style="@style/W.Home.Item"
                            app:layout_constraintStart_toStartOf="@+id/home_health"
                            app:layout_constraintTop_toBottomOf="@+id/home_status">

                            <TextView
                                style="@style/W.Home.ItemContent"
                                android:text="@string/home_conect_title" />

                            <TextView
                                android:id="@+id/home_conect_info"
                                style="@style/W.Home.ItemContent.Right"
                                tools:text="onclite" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/home_sys_uptime"
                            style="@style/W.Home.Item.Bottom"
                            app:layout_constraintStart_toStartOf="@+id/home_status"
                            app:layout_constraintTop_toBottomOf="@+id/home_conect">

                            <TextView
                                style="@style/W.Home.ItemContent"
                                android:text="@string/home_sys_uptime_title" />

                            <TextView
                                android:id="@+id/home_sys_uptime_info"
                                style="@style/W.Home.ItemContent.Right"
                                tools:text="onclite" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/home_cycle"
                            style="@style/W.Home.Item.Bottom"
                            app:layout_constraintStart_toStartOf="@+id/home_conect"
                            app:layout_constraintTop_toBottomOf="@+id/home_sys_uptime">

                            <TextView
                                style="@style/W.Home.ItemContent"
                                android:text="@string/home_cycle_title" />

                            <TextView
                                android:id="@+id/home_cycle_info"
                                style="@style/W.Home.ItemContent.Right"
                                tools:text="onclite" />

                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>