<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <com.google.android.material.card.MaterialCardView
        style="@style/WidgetFoundation.Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/l1"
            android:paddingTop="@dimen/l_50"
            android:paddingEnd="@dimen/l1"
            android:paddingBottom="@dimen/l_50"
            tools:layout_gravity="center">

            <ImageView
                android:id="@+id/home_memory_icon"
                style="@style/WidgetFoundation.Icon.Primary"
                android:padding="@dimen/l_25"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_memory"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/home_memory_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/l1"
                android:textAppearance="@style/AppearanceFoundation.Title"
                android:textColor="?colorPrimary"
                android:maxLines="1"
                android:ellipsize="end"
                android:text="@string/home_memory_title"
                app:layout_constraintBottom_toBottomOf="@+id/home_memory_icon"
                app:layout_constraintStart_toEndOf="@+id/home_memory_icon"
                app:layout_constraintTop_toTopOf="@+id/home_memory_icon" />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/home_device_title_barrier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="bottom"
                tools:constraint_referenced_ids="home_memory_icon,home_memory_title" />

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fadingEdgeLength="@dimen/l1"
                android:requiresFadingEdge="horizontal"
                android:scrollbars="none"
                app:layout_constraintTop_toBottomOf="@+id/home_memory_icon">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/home_ram"
                            style="@style/W.Home.Item.Top"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent">

                            <TextView
                                style="@style/W.Home.ItemContent"
                                android:text="@string/home_ram_title" />

                            <TextView
                                android:id="@+id/home_ram_info"
                                style="@style/W.Home.ItemContent.Right"
                                tools:text="onclite" />

                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/home_free_ram"
                            style="@style/W.Home.Item"
                            app:layout_constraintStart_toStartOf="@+id/home_ram"
                            app:layout_constraintTop_toBottomOf="@+id/home_ram">

                            <TextView
                                style="@style/W.Home.ItemContent"
                                android:text="@string/home_free_ram_title" />

                            <TextView
                                android:id="@+id/home_free_ram_info"
                                style="@style/W.Home.ItemContent.Right"
                                tools:text="onclite" />

                        </LinearLayout>

                        <LinearLayout
                            android:id="@+id/home_internal"
                            style="@style/W.Home.Item.Top"
                            app:layout_constraintStart_toStartOf="@+id/home_ram"
                            app:layout_constraintTop_toBottomOf="@+id/home_free_ram">

                            <TextView
                                style="@style/W.Home.ItemContent"
                                android:text="@string/home_internal_title" />

                            <TextView
                                android:id="@+id/home_internal_info"
                                style="@style/W.Home.ItemContent.Right"
                                tools:text="onclite" />

                        </LinearLayout>
                        <LinearLayout
                            android:id="@+id/home_external"
                            style="@style/W.Home.Item.Bottom"
                            app:layout_constraintStart_toStartOf="@+id/home_free_ram"
                            app:layout_constraintTop_toBottomOf="@+id/home_internal">

                            <TextView
                                style="@style/W.Home.ItemContent"
                                android:text="@string/home_external_title" />

                            <TextView
                                android:id="@+id/home_external_info"
                                style="@style/W.Home.ItemContent.Right"
                                tools:text="onclite" />

                        </LinearLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>